--- a/package.json
+++ b/package.json
@@ -1,27 +1,36 @@
 {
-  "name": "portfolio-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "framer-motion": "^7.1.0",
-    "next": "12.2.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.4.0",
-    "react-slick": "^0.29.0"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.8",
-    "daisyui": "^2.24.0",
-    "eslint": "8.22.0",
-    "eslint-config-next": "12.2.5",
-    "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8"
-  }
+    "name": "portfolio-app",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "postbuild": "next-sitemap --config next-sitemap.config.js",
+        "start": "next start",
+        "pretty": "prettier -w ."
+    },
+    "dependencies": {
+        "framer-motion": "^7.1.0",
+        "next": "12.2.5",
+        "next-seo": "^5.5.0",
+        "next-sitemap": "^3.1.21",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-icons": "^4.4.0",
+        "react-slick": "^0.29.0"
+    },
+    "devDependencies": {
+        "autoprefixer": "^10.4.8",
+        "daisyui": "^2.24.0",
+        "postcss": "^8.4.16",
+        "tailwindcss": "^3.1.8"
+    },
+    "prettier": {
+        "semi": false,
+        "singleQuote": true,
+        "jsxSingleQuote": true,
+        "tabWidth": 4,
+        "printWidth": 100,
+        "trailingComma": "none"
+    }
 }
