--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "devDependencies": {
         "autoprefixer": "^10.4.8",
         "daisyui": "^2.24.0",
+        "next-ym": "^2.3.5",
+        "nextjs-google-analytics": "^2.1.0",
         "postcss": "^8.4.16",
         "tailwindcss": "^3.1.8"
     },
